# graphics

./: README.md  things_learned.md
basic_qt/: Makefile  basic_qt  basic_qt.pro  qt_basic.cpp
ray_tracer_01/: .#vertex_shader  Makefile  frag_shader.glsl  main  main.cpp  ray.py  vertex_shader.glsl
ray_tracer_01/src/: dataType.hpp  main.cpp
ray_tracer_02/: Makefile  main
ray_tracer_02/include/: stb_image.h  stb_image_write.h
ray_tracer_02/src/: dataType.hpp  main.cpp
ray_tracer_03/: CMakeLists.txt
ray_tracer_03/include/: Tracer.h  color.h  environment.h  projectile.h  tuple.h
ray_tracer_03/src/: Tracer.cpp  environment.cpp  main.cpp  main_projectile.cpp  main_test.cpp  projectile.cpp  tuple.cpp
ray_tracer_03/src_entrypnt/: main_projectile.cpp  main_test.cpp
shaders/basics_01/: Makefile  frag_shader.glsl  main  vertex_shader.glsl
